...
                                        .padding(5)
                                        .padding(.trailing, 3)
                                }
                            }
                            .onAppear {
                                navigationVisible = .visible
                                navigationTitle = "Home"
                            }
                        case .weather:
                            VStack {
                                ForecastView()
                                    .padding(5)
                                    .padding(.trailing, 3)
...
                                SettingsView()
                                    .padding(5)
                                    .padding(.trailing, 3)
                            }
                            .onAppear {
                                navigationVisible = .visible
                                navigationTitle = "Settings"
                            }
                    }
                }
                .frame(maxWidth: .infinity)
                .toolbar {
                    ToolbarItem(placement: .principal) {
...
                            if self.isAvailable(.environment) == true {
                                Spacer()
                                Button(action: { selectedScreen = .environment }) {
                                    Image(systemName: selectedScreen == .environment ? "leaf.fill" : "leaf")
                                        .foregroundColor(selectedScreen == .environment ? .accentColor : .accentColor.opacity(0.5))
                                }
                                .accessibilityLabel("Environment")
                            }
                            if self.isAvailable(.particles) == true {
                                Spacer()
                                Button(action: { selectedScreen = .particles }) {
                                    Image(systemName: selectedScreen == .particles ? "aqi.medium" : "aqi.low")
                                        .foregroundColor(selectedScreen == .particles ? .accentColor : .accentColor.opacity(0.5))
...
